# doctor

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
configs/defaults/: README.md  bibliography.toml  document.toml  figures.toml  layout.toml  math.toml  output.toml  typography.toml
configs/defaults/css/: article.css  bibliography.css  book.css  components.css  figures.css  layout.css  main.css  math.css  print.css  reset.css  thesis.css  typography.css
docs/: architecture.md  project-setup.md
docs/_archive/: architecture-visualization.mermaid  develop-guide.md  footnotes-plan.md  phase-summary.md  previous-version-history.md  project-specifications.md  references.toml  rust-app-architecture.mermaid  status-and-plan.md
docs/test-project/: +document.toml  .docignore  .gitignore  README.md  doctor.toml  i. Preface.md  references.toml
docs/test-project/+papers/: Holographic Entropy Note.md
docs/test-project/+slides/: Overview Deck.md
docs/test-project/.doctor/: article.toml  book.toml
docs/test-project/1. Introduction/: 1. Historical Context.md  2. Motivation and Scope.md
docs/test-project/2. Quantum Field Theory/: 1. Mathematical Foundations.md  2. Feynman Diagrams.md
docs/test-project/A. Mathematical Reference/: 1. Useful Integrals.md
docs/test-project/I. Foundations/1. Introduction/: 1. Historical Context.md
docs/test-project/I. Foundations/2. Quantum Field Theory/: 1. Mathematical Foundations.md
docs/test-project/II. Frontiers/3. Black Holes/: 1. Thermodynamic Properties.md  2. Information Paradox.md
docs/test-project/II. Frontiers/3. Black Holes/3. Toy Models/: 1. Two-Dimensional Gravity.md
src/doctor/: __init__.py  __main__.py  cli.py  discovery.py  resolve.py  versioning.py
src/doctor/configs/: __init__.py  loader.py  models.py
src/doctor/generators/: __init__.py  base.py  html.py  mathbb_digits.py  pdf.py  slides.py
src/doctor/ingest/: __init__.py  assembly.py  bibliography.py  content.py  references.py  report.py  roles.py  structure.py
src/doctor/models/: __init__.py  assembly.py  bibliography.py  content.py  math.py  references.py  structure.py
src/doctor/tools/: __init__.py  reforg.py
src/tests/: test_chapter_structure.py  test_configs.py  test_configs_integration.py  test_discovery.py  test_doctor_root.py  test_feature_validation.py  test_ingest_pipeline.py  test_resolve_and_single_file.py  test_slides.py  test_toc.py  test_versioning.py
