[project]
name = "doctor"
version = "0.1.0"
description = "Academic document generation from Obsidian notes"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Brian Leist", email = "bleist@protonmail.com" }
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "toml>=0.10",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "playwright>=1.54.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
]

[project.scripts]
doctor = "doctor:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]
